# Labs2025Proga

./: .gitignore  README.md  lab2(part 2).ipynb  run.sh
.github/workflows/: cmake.yml
HW6_OpenCV/: CMakeLists.txt  README.md  main.cpp
Lab1/: lab1.ipynb
Lab1/vhi_data/: VHI_all_UKR_sorted_2025-10-14_15-02.csv
Lab2/: lab2.ipynb
Lab3/: CMakeLists.txt  build.sh  preinstall.sh
Lab3/include/: CameraProvider.hpp  KeyProcessor.hpp
Lab3/src/: CameraProvider.cpp  Display.cpp  FrameProcessor.cpp  KeyProcessor.cpp  main.cpp
Lab4/: CMakeLists.txt  README.md  main.cpp  settings.json
Lab4/include/: ConfigManager.hpp  FaceDetector.hpp  Logger.hpp
Lab4/src/: FaceDetector.cpp
include/: Display.hpp  FrameProcessor.hpp
